# SCG

./: .nojekyll  LICENSE  README.md  data-application.html  install.html  pyproject.toml  r-usage.html  robots.txt  search.json  sitemap.xml
data/: fit_scr.py  gene_names.csv  spot_info.csv
docs/: _quarto.yml  data-application.qmd  index.qmd  install.qmd  r-usage.qmd  vignette.html  vignette.qmd
docs/_site/: data-application.html  index.html  install.html
results/: results.csv
scr/: __init__.py  analysis.py  model.py  utils.py
